# libtz

./: Makefile.am  README.md  autogen.sh  configure.ac  tz.pc.in
src/: Makefile.am  tz.c  tz.h  tz_test.c
